# data-insight-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: chart_describer.py  chart_generator.py  column_semantics_agent.py  data_analyzer.py  data_profiler.py  insight_generator.py  prompt_builder.py  qa_agent.py
app/ui/: streamlit_app.py
app/utils/: file_handler.py  pdf_generator.py
src/data_insight_ai/: agent_loader.py  crew.py  main.py  task_loader.py
src/data_insight_ai/config/: agents.yaml  tasks.yaml
src/data_insight_ai/tools/: chart_generator_tool.py
src/data_insight_ai/ui/: streamlit_app.py
src/data_insight_ai/utils/: pdf_generator.py
